Improve key names in opts map, quiet reflection warnings on load
Also add a little bit of documentation to readme